--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>PROJECT <a href="#page-top" title="Home">&#9776;</a></h5>
       		  <ul class="lead" style="list-style-type:square">
+            <li>Development of End-to-End 8 Ultra-Communication and Networking Technologies, Korean IITP, 07/2022-12/2029.</li>
       			<li>Intelligent adaptive bitrate video streaming empowered by cross-tier user-centric edge caching systems, Korean NRF, 03/2021-02/2024.</li>
       			<li>Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems, SejongIACF, 03/2020-02/2021.</li>
       		  </ul>
@@ -73,8 +74,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>BOOK CHAPTER <a href="#page-top" title="Home">&#9776;</a></h5>
+          <h5>(BOOK) CHAPTER <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ul class="lead" style="list-style-type:square">
+        <li>Nguyen NT, <b>Dao NN</b>, Pham QD, and Le HA [Eds], "Intelligence of things: Technologies and applications - Proceedings of the first international conference on intelligence of things (ICIT 2022)", Springer, Cham, Switzerland, 2022. [<a href="https://doi.org/10.1007/978-3-031-15063-0">Springer</a>].</li>
 				<li><b>Dao NN</b>, Dinh NT, Pham QV, Phan TV, Cho S, and Braun T, "Vulnerabilities in fog/edge computing from architectural perspectives", Chapter 8, in <i>Fog/edge computing for security, privacy, and applications</i>, Wu J and Chang W [Eds], Springer, Cham, Switzerland, 2021. [<a href="https://doi.org/10.1007/978-3-030-57328-7_8">Springer</a>].</li>
 				<li><b>Dao NN</b>, Tran QD, Dinh NT, Cho S, and Braun T, "Edge computing architectures", Chapter 2, in <i>Edge computing: Models, technologies and applications</i>, Taheri J and Deng S [Eds], The Institution of Engineering and Technology (IET), London, UK, 2020. [<a href="https://doi.org/10.1049/PBPC033E_ch2">IET</a>].</li>
 			  </ul>
@@ -153,7 +155,8 @@
         <div class="col-lg-12 mx-auto">
           <h5>CONFERENCE PUBLICATION [<a href="#journal" title="Journal publication">&#9651;</a>] [<a href="#patent" title="Patent">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
   			  <ol reversed class="lead">
-	  		    <li>Tuong VD, <b>Dao NN</b>, Noh W, and Cho S, "Dynamic time division duplexing for green Internet of things", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 356-368, Jeju island, Korea, January 12-15, 2022. [<a href="https://doi.org/10.1109/ICOIN53446.2022.9687184">IEEE</a>].</li>
+            <li>Ha MQ, Phan VH, Nguyen BDQ, Nguyen HB, Do TH, Pham QD, and <b>Dao NN</b>, "Intelligent scene text recognition in streaming videos", <i>International Conference on Intelligence of Things (ICIT)</i>, pp. 356-365, Hanoi, Vietnam, August 17-19, 2022. [<a href="https://doi.org/10.1007/978-3-031-15063-0_34">Springer</a>].</li>
+	          <li>Tuong VD, <b>Dao NN</b>, Noh W, and Cho S, "Dynamic time division duplexing for green Internet of things", <i>IEEE International Conference on Information Networking (ICOIN)</i>, pp. 356-368, Jeju island, Korea, January 12-15, 2022. [<a href="https://doi.org/10.1109/ICOIN53446.2022.9687184">IEEE</a>].</li>
  	  		    <li>Le BL, Lam GH, Nguyen XV, Nguyen TM, Duong QL, Tran QD, Do TH, and <b>Dao NN</b>, "A deep learning based traffic sign detection for intelligent transportation systems", <i>International Conference on Computational Data and Social Networks (CSoNet)</i>, pp. 129-137, Montreal, Canada, November 15-17, 2021. [<a href="https://doi.org/10.1007/978-3-030-91434-9_12">Springer</a>].</li>
   				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in HAP-assisted MEC networks", <i>IEEE International Conference on Information and Communication Technology Convergence (ICTC)</i>, pp. 1582-1587, Jeju island, Korea, October 20-22, 2021. [<a href="https://doi.org/10.1109/ICTC52510.2021.9621158">IEEE</a>]. (<b>Best Paper Award</b>)</li>
 	  		    <li>Nguyen XV, Lam GH, Le QN, Duong QL, Nguyen TM, Le BL, Tran QD, Do TH, and <b>Dao NN</b>, "Intelligent augmented video streaming services using lightweight QR code scanner", <i>IEEE International Conference on Communication, Networks and Satellite (COMNETSAT)</i>, pp. 103-107, Purwokerto, Indonesia, July 17-18, 2021. [<a href="http://doi.org/10.1109/COMNETSAT53002.2021.9530819">IEEE</a>].</li>
