--- a/nndao.html
+++ b/nndao.html
@@ -45,9 +45,9 @@
           <h5>PROFESSIONAL TIMELINE</h5>
 		  <ul class="lead" style="list-style-type:square">
 			<li><i>03.2020 - present:</i> Assistant professor, Department of Computer Science and Engineering, Sejong University, Seoul, Korea.</li>
-			<li><i>09.2019 - 02.2020:</i> Postdoc researcher, Institute of Computer Science, University of Bern, Bern, Switzerland.</li>
+			<li><i>09.2019 - 02.2020:</i> Postdoc researcher, Institute of Computer Science, University of Bern, Bern, Switzerland.<br>(Advisor: <a href="https://www.cds.unibe.ch/about_us/team/current/prof_dr_braun_torsten">Prof. Torsten Braun</a>)</li>
 			<li><i>07.2019 - 08.2019:</i> Visiting researcher, CDSC Center, University of Newcastle, NSW, Australia.</li>
-			<li><i>03.2016 - 08.2019:</i> Ph.D., School of Computer Science and Engineering, Chung-Ang University, Seoul, Korea.</li>
+			<li><i>03.2016 - 08.2019:</i> Ph.D., School of Computer Science and Engineering, Chung-Ang University, Seoul, Korea.<br>(Advisor: <a href="http://cau.ac.kr/~srcho">Prof. Sungrae Cho</a>)</li>
 			<li><i>03.2014 - 02.2016:</i> M.S., School of Computer Science and Engineering, Chung-Ang University, Seoul, Korea.</li>
 			<li><i>01.2009 - 02.2014:</i> Engineer, Global Telecommunication Corporation, Hanoi, Vietnam.</li>
 			<li><i>09.2004 - 12.2008:</i> B.S., Posts and Telecommunications Institute of Technology, Hanoi, Vietnam.</li>
@@ -83,7 +83,7 @@
 						</ul>
 					</li>
 					<li>Invited talks: <a href="http://due.udn.vn/vi-vn/computing4human-intro/cid/4675">Computing4Human2021</a>;</li>
-					<li>Organizing committee member: <a href="https://icit2022.humg.edu.vn">ICIT2022</a>, <a href="https://doi.org/10.1109/ICOIN50884.2021.9334031">ICOIN2021</a>;</li>
+					<li>Organizing committee member: <a href="https://doi.org/10.1007/978-3-031-15063-0">ICIT2022</a>, <a href="https://doi.org/10.1109/ICOIN50884.2021.9334031">ICOIN2021</a>;</li>
 					<li>TPC member: <a href="https://doi.org/10.1109/COMNETSAT53002.2021.9530800">COMNETSAT2021</a>, <a href="https://doi.org/10.1109/Comnetsat50391.2020.9328945">COMNETSAT2020</a>, <a href="https://doi.org/10.1109/ISCIT.2019.8905141">ISCIT2019</a>, <a href="https://doi.org/10.1109/ICECIE47765.2019.8974660">ICECIE2019</a>, <a href="https://doi.org/10.1109/ICOIN.2018.8343069">ICOIN2018</a>;</li>
 					<li>Reviewer: IEEE JSAC, TVT, TCC, TITS, IOTJ, CIM, WCM, ACCESS, COMSTD, Elsevier JNCA, Wiley NEM, Springer WIRE, etc.</li>
 				</ul>
