--- a/marathon.html
+++ b/marathon.html
@@ -94,6 +94,10 @@ img {vertical-align: middle;}
 <br>
 <div class="slideshow-container">
 <div class="mySlides fade">
+  <img src="marathon/Truong Sa island course.jpg" style="width:100%; height:100%">
+  <div class="text">Truong Sa island course, 0:30:46 (5.71K), April 21, 2023, Truong Sa (Spratly) island, Viet Nam</div>
+</div>
+<div class="mySlides fade">
   <img src="marathon/Ljubljana Marathon 20191027.jpg" style="width:100%; height:100%">
   <div class="text">Ljubljana Marathon, 4:49:37 (42K), October 27, 2019, Ljubljana, Slovenia</div>
 </div>
@@ -109,6 +113,7 @@ img {vertical-align: middle;}
 <br>
 
 <div style="text-align:center">
+  <span class="dot"></span> 
   <span class="dot"></span> 
   <span class="dot"></span> 
   <span class="dot"></span> 
@@ -142,6 +147,7 @@ function showSlides() {
       <div class="row">
         <div class="col-lg-12 mx-auto">
         <ol reversed class="lead">
+        <li>Truong Sa island course, 0:30:46 (5.71K), April 21, 2023, Truong Sa (Spratly) island, Viet Nam</li>
         <li>Ljubljana Marathon, 4:49:37 (42K), October 27, 2019, Ljubljana, Slovenia</li>
         <li>Brussels Marathon, 4:45:05 (42K), October 6, 2019, Brussels, Belgium</li>
         <li>Seoul Marathon, 4:55:29 (42K), March 17, 2019, Seoul, South Korea</li>
