--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>INTRODUCTION <a href="#page-top" title="Home">&#9776;</a></h5>
           <p class="lead">Privacy-Sensitive Heterogeneous Hypercomputing (PSHH) lab is led by <a href="nndao">Dr. Nhu-Ngoc Dao</a> at the Department of Computer Science and Engineering, Sejong University, Seoul. Our lab investigates technological challenges in the research fields of networks, systems, and communications with the aim of intelligent people networking. Currently, we focus on developing cutting-edge solutions of network softwarization, mobile cloudification, intelligent systems, and the Intelligence of Things toward B5G/6G. Directly contact <a href="nndao">Nhu-Ngoc Dao</a> if you are willing to be a member of our family. Korean and international citizens are all welcome!</p>
-          <p class="lead"><font color="slategray" size="3">Feature article: Dao NN et al., "Toward privacy-sensitive heterogeneous hypercomputing", to appear in <i>IEEE Communications Magazine</i> [<a href="">IEEE</a>]|[<a href="/pshhcommag.pdf">PDF</a>]</font></p>
+          <p class="lead"><font color="slategray" size="3">Feature article: Dao NN et al., "Toward privacy-sensitive heterogeneous hypercomputing", to appear in <i>IEEE Communications Magazine</i> [<a href="https://doi.org/10.1109/MCOM.001.2300145">IEEE</a>]|[<a href="/pshhcommag.pdf">PDF</a>]</font></p>
         </div>
       </div>
     </div>
@@ -96,7 +96,7 @@
 			  <ol reversed class="lead">
         <li>Masood A, <b>Dao NN</b>, and Cho S, "Privacy-preserving intelligent content-caching scheme in heterogeneous aerial access networks", <i>Expert Systems with Applications</i>. In press [<a href="">Elsevier</a>]</li>
         <li id="j61"><b>Nguyen TV</b>, Hua DT, Huong TH, Hoang VT, <b>Dao NN</b>, and Cho S, "Intelligent QoE management for IoMT streaming services in multi-user downlink RSMA networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2023.3334473">IEEE</a>]</li>
-        <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>. In press. [<a href="">IEEE</a>]</li>
+        <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>. In press. [<a href="https://doi.org/10.1109/MCOM.001.2300145">IEEE</a>]</li>
         <li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent self-optimization for task offloading in LEO-MEC-assisted energy-harvesting-UAV systems", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="">IEEE</a>]</li>
         <li>Kim N, Na W, Lakew DS, <b>Dao NN</b>, and Cho S, "DQN-based directional MAC protocol in wireless ad hoc network in Internet of things", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2023.3338562">IEEE</a>]</li>
         <li>Samanta A, Pham QV, <b>Dao NN</b>, Muthanna A, and Cho S, "mISO: Incentivizing demand-agnostic microservices for edge-enabled IoT networks", <i>IEEE Transactions on Services Computing</i>, vol. 16, no. 5, pp. 3523-3536, 2023. [<a href="https://doi.org/10.1109/TSC.2023.3292362">IEEE</a>]</li>
