--- a/nndao.html
+++ b/nndao.html
@@ -13,7 +13,6 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom styles for this template He is the Director of the <a href="ihn">Intelligent Human Networking laboratory</a> at Sejong University. -->
   <link href="css/scrolling-nav.css" rel="stylesheet">
 
 </head>
@@ -45,6 +44,7 @@
           <h5>PROFESSIONAL TIMELINE</h5>
 		  <ul class="lead" style="list-style-type:square">
 			<li><i>03.2020 - present:</i> Assistant professor, Department of Computer Science and Engineering, Sejong University, Seoul, Korea.</li>
+      <li><i>09.2023 - 02.2024:</i> Visiting professor, Department of Computer Science and Engineering, Chung-Ang University, Seoul, Korea.</li>
 			<li><i>09.2019 - 02.2020:</i> Postdoc researcher, Institute of Computer Science, University of Bern, Bern, Switzerland.<br>(Advisor: <a href="https://www.cds.unibe.ch/about_us/team/current/prof_dr_braun_torsten">Prof. Torsten Braun</a>)</li>
 			<li><i>07.2019 - 08.2019:</i> Visiting researcher, CDSC Center, University of Newcastle, NSW, Australia.</li>
 			<li><i>03.2016 - 08.2019:</i> Ph.D., School of Computer Science and Engineering, Chung-Ang University, Seoul, Korea.<br>(Advisor: <a href="http://cau.ac.kr/~srcho">Prof. Sungrae Cho</a>)</li>
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>TEACHING COURSE</h5>
+          <h5>TEACHING COURSES</h5>
       <ul class="lead" style="list-style-type:square">
       <li>Wireless communications (Undergraduate)</li>
       <li>Digital systems (Undergraduate)</li>
@@ -104,7 +104,7 @@
 						</ul>
 					</li>
 					<li>Invited talks: <a href="http://due.udn.vn/vi-vn/computing4human-intro/cid/4675">Computing4Human2021</a>;</li>
-					<li>Organizing committee member: ICIT2023, <a href="https://doi.org/10.1007/978-3-031-15063-0">ICIT2022</a>, <a href="https://doi.org/10.1109/ICTC55196.2022.9952520">ICTC2022</a>, <a href="https://doi.org/10.1109/ICOIN50884.2021.9334031">ICOIN2021</a>;</li>
+					<li>Organizing committee member: <a href="https://icitconf.org">ICIT2024</a>, <a href="https://doi.org/10.1007/978-3-031-46573-4">ICIT2023</a>, <a href="https://doi.org/10.1007/978-3-031-15063-0">ICIT2022</a>, <a href="https://doi.org/10.1109/ICTC55196.2022.9952520">ICTC2022</a>, <a href="https://doi.org/10.1109/ICOIN50884.2021.9334031">ICOIN2021</a>;</li>
 					<li>TPC member: <a href="https://doi.org/10.1109/CyberneticsCom55287.2022.9865342">CyberneticsCom2022</a>, <a href="https://doi.org/10.1109/COMNETSAT56033.2022.9994508">COMNETSAT2022</a>, <a href="https://doi.org/10.1109/COMNETSAT53002.2021.9530800">COMNETSAT2021</a>, <a href="https://doi.org/10.1109/Comnetsat50391.2020.9328945">COMNETSAT2020</a>, <a href="https://doi.org/10.1109/ISCIT.2019.8905141">ISCIT2019</a>, <a href="https://doi.org/10.1109/ICECIE47765.2019.8974660">ICECIE2019</a>, <a href="https://doi.org/10.1109/ICOIN.2018.8343069">ICOIN2018</a>;</li>
 					<li>Reviewer: IEEE JSAC, TVT, TCC, TITS, IOTJ, CIM, WCM, ACCESS, COMSTD, Elsevier JNCA, Wiley NEM, Springer WIRE, etc.</li>
 				</ul>
