--- a/potentialvenues.html
+++ b/potentialvenues.html
@@ -22,7 +22,7 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>Potential Pubication Venues</h1>
+      <h1>Potential Publication Venues</h1>
       <p class="lead" style="text-align:center;">PSHH Lab, Sejong University</p>
     </div>
   </header>
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>Potential Journals</h5>
-      		  <ol reversed class="lead">
+      		  <ol class="lead">
               <li>IEEE Communications Surveys and Tutorials</li>
               <li>Proceedings of the IEEE</li>
               <li>IEEE Wireless Communications</li>
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>Potential Conferences</h5>
-      		  <ol reversed class="lead">
+      		  <ol class="lead">
             <li>AAAI Conference on Artificial Intelligence (AAAI)</li>
             <li>IEEE Conference on Computer Communications (INFOCOM)</li>
             <li>ACM International Conference on Mobile Computing and Networking (MobiCom)</li>
