--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
-            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j61"> [61] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
+            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j60"> [60] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
       		  </ul>
         </div>
       </div>
@@ -95,11 +95,12 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li><b>Dao NN</b>, Tu NH, Hoang TD, Nguyen TH, Nguyen LV, Lee K, Park L, Na W, and Cho S, "A review on new technologies in 3GPP standards for 5G access and beyond", <i>Computer Networks</i>. In press. [<a href="https://doi.org">Elsevier</a>]</li>
         <li>Nguyen TH, Truong TP, Tran AT, <b>Dao NN</b>, Park L, and Cho S, "Intelligent heterogeneous aerial edge computing for advanced 5G access", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2024.3371434">IEEE</a>]</li>
         <li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent self-optimization for task offloading in LEO-MEC-assisted energy-harvesting-UAV systems", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2023.3349321">IEEE</a>]</li>
-        <li id="j61"><b>Nguyen TV</b>, Hua DT, Huong TH, Hoang VT, <b>Dao NN</b>, and Cho S, "Intelligent QoE management for IoMT streaming services in multi-user downlink RSMA networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2023.3334473">IEEE</a>]</li>
         <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>. In press. [<a href="https://doi.org/10.1109/MCOM.001.2300145">IEEE</a>]</li>
         <li>Kim N, Na W, Lakew DS, <b>Dao NN</b>, and Cho S, "DQN-based directional MAC protocol in wireless ad hoc network in Internet of things", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2023.3338562">IEEE</a>]</li>
+        <li id="j60"><b>Nguyen TV</b>, Hua DT, Huong TH, Hoang VT, <b>Dao NN</b>, and Cho S, "Intelligent QoE management for IoMT streaming services in multi-user downlink RSMA networks", <i>IEEE Internet of Things Journal</i>, vol. 11, no. 7, pp. 12602-12618, 2024. [<a href="https://doi.org/10.1109/JIOT.2023.3334473">IEEE</a>]</li>
         <li>Tran NP, Truong TP, Do QT, <b>Dao NN</b>, and Cho S, "Joint wireless resource allocation and bitrate adaptation for QoE improvement in IRS-aided RSMA-enabled IoMT streaming systems", <i>Internet of Things</i>, vol. 25, p. 101145, 2024. [<a href="https://doi.org/10.1016/j.iot.2024.101145">Elsevier</a>]</li>
         <li>Masood A, <b>Dao NN</b>, and Cho S, "Privacy-preserving intelligent content-caching scheme in heterogeneous aerial access networks", <i>Expert Systems with Applications</i>, vol. 243, p. 122834, 2024. [<a href="https://doi.org/10.1016/j.eswa.2023.122834">Elsevier</a>]</li>
         <li>Samanta A, Pham QV, <b>Dao NN</b>, Muthanna A, and Cho S, "mISO: Incentivizing demand-agnostic microservices for edge-enabled IoT networks", <i>IEEE Transactions on Services Computing</i>, vol. 16, no. 5, pp. 3523-3536, 2023. [<a href="https://doi.org/10.1109/TSC.2023.3292362">IEEE</a>]</li>
