--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       		  <ul class="lead" style="list-style-type:square">
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
             <li>Tuan Anh Nguyen (Vietnam), PhD student since 3/2024</li>
-            <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
             <li style="list-style-type:disc">The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j60"> [60] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
+            <li style="list-style-type:disc">Teshager Hailemariam Moges (Ethiopia), MS student, 9/2022~8/2024 <font color="slategray" size="3"> <i> <br>- Thesis title: Trajectory optimization for mission-critical UAV systems in SCMA networks <br>- Research achievement: <a href="#j54"> [54] </a> <br>- Next place: TBU</i> </font> </li>
       		  </ul>
         </div>
       </div>
@@ -95,8 +95,8 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
-        <li>Nguyen TH, Truong TP, Tran AT, <b>Dao NN</b>, Park L, and Cho S, "Intelligent heterogeneous aerial edge computing for advanced 5G access", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2024.3371434">IEEE</a>]</li>
         <li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent self-optimization for task offloading in LEO-MEC-assisted energy-harvesting-UAV systems", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2023.3349321">IEEE</a>]</li>
+        <li>Nguyen TH, Truong TP, Tran AT, <b>Dao NN</b>, Park L, and Cho S, "Intelligent heterogeneous aerial edge computing for advanced 5G access", <i>IEEE Transactions on Network Science and Engineering</i>, vol. 11, no. 4, pp. 3398-3411, 2024. [<a href="https://doi.org/10.1109/TNSE.2024.3371434">IEEE</a>]</li>
         <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>, vol. 62, no. 4, pp. 24-30, 2024. [<a href="https://doi.org/10.1109/MCOM.001.2300145">IEEE</a>]</li>
         <li><b>Dao NN</b>, Tu NH, Hoang TD, Nguyen TH, Nguyen LV, Lee K, Park L, Na W, and Cho S, "A review on new technologies in 3GPP standards for 5G access and beyond", <i>Computer Networks</i>, vol. 245, p. 110370, 2024. [<a href="https://doi.org/10.1016/j.comnet.2024.110370">Elsevier</a>]</li>
         <li>Kim N, Na W, Lakew DS, <b>Dao NN</b>, and Cho S, "DQN-based directional MAC protocol in wireless ad hoc network in Internet of things", <i>IEEE Internet of Things Journal</i>, vol. 11, no. 7, pp. 12918-12928, 2024. [<a href="https://doi.org/10.1109/JIOT.2023.3338562">IEEE</a>]</li>
@@ -106,7 +106,7 @@
         <li>Samanta A, Pham QV, <b>Dao NN</b>, Muthanna A, and Cho S, "mISO: Incentivizing demand-agnostic microservices for edge-enabled IoT networks", <i>IEEE Transactions on Services Computing</i>, vol. 16, no. 5, pp. 3523-3536, 2023. [<a href="https://doi.org/10.1109/TSC.2023.3292362">IEEE</a>]</li>
         <li>Hua DT, Do QT, <b>Dao NN</b>, Nguyen TV, Lakew DS, and Cho S, "Learning-based reconfigurable intelligent surface-aided rate-splitting multiple access networks", <i>IEEE Internet of Things Journal</i>, vol. 10, no. 20, pp. 17603-17619, 2023. [<a href="https://doi.org/10.1109/JIOT.2023.3279196">IEEE</a>]</li>
         <li>Le AT, Do DT, <b>Dao NN</b>, Nguyen ND, and Silva A, "New look at secure performance of massive MIMO with low-resolution DACs", <i>ICT Express</i>, vol. 9, no. 4, pp. 608-613, 2023. [<a href="https://doi.org/10.1016/j.icte.2022.09.004">Elsevier</a>]</li>
-        <li><b>Moges TH</b>, Lakew DS, Nguyen NP, <b>Dao NN</b>, and Cho S, "Cellular Internet of things: Use cases, technologies, and future work", <i>Internet of Things</i>, vol. 24, p. 100910, 2023. [<a href="https://doi.org/10.1016/j.iot.2023.100910">Elsevier</a>]</li>
+        <li id="j54"><b>Moges TH</b>, Lakew DS, Nguyen NP, <b>Dao NN</b>, and Cho S, "Cellular Internet of things: Use cases, technologies, and future work", <i>Internet of Things</i>, vol. 24, p. 100910, 2023. [<a href="https://doi.org/10.1016/j.iot.2023.100910">Elsevier</a>]</li>
         <li>Masood A, Ha T, Lakew DS, <b>Dao NN</b>, and Cho S, "Intelligent TCP congestion control scheme in Internet of deep space things communication", <i>IEEE Transactions on Network Science and Engineering</i>, vol. 10, no. 3, pp. 1472-1486, 2023. [<a href="https://doi.org/10.1109/TNSE.2022.3212534">IEEE</a>]</li>
 				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in heterogeneous aerial access IoT networks", <i>IEEE Internet of Things Journal</i>, vol. 10, no. 7, pp. 5704-5718, 2023. [<a href="https://doi.org/10.1109/JIOT.2022.3161571">IEEE</a>]</li>
         <li>Na W, Kim N, <b>Dao NN</b>, and Cho S, "Machine learning-based communication failure identification scheme for directional industrial IoT networks", <i>IEEE Systems Journal</i>, vol. 17, no. 1, pp. 1559-1568, 2023. [<a href="https://doi.org/10.1109/JSYST.2022.3192066">IEEE</a>]</li>
