--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       		  <ul class="lead" style="list-style-type:square">
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
             <li>Tuan Anh Nguyen (Vietnam), PhD student since 9/2024</li>
-            <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
-            <li>Samuel Harry Gardner (UK), BS student, 3/2022~8/2024, MS student since 9/2024</li>
             <li>Minh Phuoc Nguyen (Vietnam), MS student since 9/2024</li>
-            <li style="list-style-type:disc">The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j60"> [60] </a> <br>- Next place: R&D Engineer, LG Innotek, South Korea</i> </font> </li>
+            <li>Samuel Harry Gardner (UK), BS student, 3/2022~8/2024, MS student since 9/2024</li>
+            <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li style="list-style-type:disc">Teshager Hailemariam Moges (Ethiopia), MS student, 9/2022~8/2024 <font color="slategray" size="3"> <i> <br>- Thesis title: Trajectory optimization for mission-critical UAV systems in SCMA networks <br>- Research achievement: <a href="#j54"> [54] </a> <br>- Next place: Lecturer, Wollo University, Ethiopia</i> </font> </li>
+            <li style="list-style-type:disc">The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j60"> [60] </a> <br>- Next place: R&D Engineer, LG Innotek, South Korea</i> </font> </li>
       		  </ul>
         </div>
       </div>
@@ -82,6 +82,7 @@
           <h5>BOOKS (CHAPTERS) <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ul class="lead" style="list-style-type:square">
         <li><b>Dao NN</b> et al. [Eds], "Intelligence of things: Technologies and applications - Proceedings of the international conference on intelligence of things (ICIT)", Springer, Cham, Switzerland, <a href="https://doi.org/10.1007/978-3-031-15063-0">2022</a> and 2023 (<a href="https://doi.org/10.1007/978-3-031-46573-4">vol. 1</a>, <a href="https://doi.org/10.1007/978-3-031-46749-3">vol. 2</a>). [<a href="https://link.springer.com/conference/icit3">Springer</a>]</li>
+        <li><b>Dao NN</b> et al. [Eds], "Advances in artificial intelligence and machine learning in big data processing - Proceedings of the first international conference on advances in artificial intelligence and machine learning in big data processing (AAIMB)", Springer, Cham, Switzerland, 2024 (<a href="https://doi.org/10.1007/978-3-031-73065-8">vol. 1</a>, <a href="https://doi.org/10.1007/978-3-031-73068-9">vol. 2</a>). [<a href="https://link.springer.com/conference/aaimb">Springer</a>]</li>
 				<li><b>Dao NN</b>, Dinh NT, Pham QV, Phan TV, Cho S, and Braun T, "Vulnerabilities in fog/edge computing from architectural perspectives", Chapter 8, in <i>Fog/edge computing for security, privacy, and applications</i>, Wu J and Chang W [Eds], Springer, Cham, Switzerland, 2021. [<a href="https://doi.org/10.1007/978-3-030-57328-7_8">Springer</a>]</li>
 				<li><b>Dao NN</b>, Tran QD, Dinh NT, Cho S, and Braun T, "Edge computing architectures", Chapter 2, in <i>Edge computing: Models, technologies and applications</i>, Taheri J and Deng S [Eds], The Institution of Engineering and Technology (IET), London, UK, 2020. [<a href="https://doi.org/10.1049/PBPC033E_ch2">IET</a>]</li>
 			  </ul>
