--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       		  <ul class="lead" style="list-style-type:square">
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
             <li>Tuan Anh Nguyen (Vietnam), PhD student since 9/2024</li>
+            <li>Islam Md Mahrab (Bangladesh), MS student since 9/2024</li>
             <li>Minh Phuoc Nguyen (Vietnam), MS student since 9/2024</li>
             <li>Samuel Harry Gardner (UK), BS student, 3/2022~8/2024, MS student since 9/2024</li>
             <li style="list-style-type:disc">Fayshal Ahmed (Bangladesh), MS student 3/2023~2/2025 <font color="slategray" size="3"> <i> <br>- Thesis title: On QoE optimization for live streaming services in multi-user uplink RSMA networks <br>- Research achievement:  <br>- Next place: PhD student, Pukyong National University, Korea</i> </font> </li>
@@ -97,7 +98,7 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
-        <li>Truong TP, Nguyen TMT, Nguyen TV, <b>Dao NN</b>, and Cho S, "Energy efficiency in RSMA-enhanced active RIS-aided quantized downlink systems", <i>IEEE Journal on Selected Areas in Communications</i>. In press. [<a href="https://doi.org/10.1109/JSAC.2025.3531522">IEEE</a>]</li>
+        <li>Truong TP, Nguyen TMT, Nguyen TV, <b>Dao NN</b>, and Cho S, "Energy efficiency in RSMA-enhanced active RIS-aided quantized downlink systems", <i>IEEE Journal on Selected Areas in Communications</i>, vol. 43, no. 3, pp. 834-850, 2025. [<a href="https://doi.org/10.1109/JSAC.2025.3531522">IEEE</a>]</li>
         <li>Truong TP, Nguyen HV, <b>Dao NN</b>, Noh W, and Cho S, "Orthogonalized RSMA based flexible multiple access in digital twin edge networks", <i>IEEE Transactions on Wireless Communications</i>, vol. 23, no. 12, pp. 18740-18756, 2024. [<a href="https://doi.org/10.1109/TWC.2024.3476383">IEEE</a>]</li>
         <li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent self-optimization for task offloading in LEO-MEC-assisted energy-harvesting-UAV systems", <i>IEEE Transactions on Network Science and Engineering</i>, vol. 11, no. 6, pp. 5135-5148, 2024. [<a href="https://doi.org/10.1109/TNSE.2023.3349321">IEEE</a>]</li>
         <li>Nguyen TH, Truong TP, Tran AT, <b>Dao NN</b>, Park L, and Cho S, "Intelligent heterogeneous aerial edge computing for advanced 5G access", <i>IEEE Transactions on Network Science and Engineering</i>, vol. 11, no. 4, pp. 3398-3411, 2024. [<a href="https://doi.org/10.1109/TNSE.2024.3371434">IEEE</a>]</li>
